[project]
name = "plugfs"
version = "0.1.0"
description = ""
authors = [
    {name = "Youri Westerman",email = "y.westerman@amsterdam.nl"},
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiohttp[speedups] (>=3.11.11,<4.0.0)",
    "azure-storage-blob (>=12.24.1,<13.0.0)",
]

[tool.poetry.group.dev.dependencies]
anyio = "^4.8.0"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.16.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
types-aiofiles = "^24.1.0.20250606"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
overwrite_in_place = true
