[project]
name = "plugfs"
version = "0.1.0"
description = ""
authors = [
    {name = "Youri Westerman",email = "y.westerman@amsterdam.nl"},
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiofiles (>=24.1.0,<26.0.0)",
    "aiohttp[speedups] (>=3.11.11,<4.0.0)",
    "azure-storage-blob (>=12.27.1,<12.29.0)", # Currently 12.18.0 is not compatible with Azurite (latest 3.35.0)
]

[dependency-groups]
dev = [
    "anyio>=4.10.0",
    "black>=25.1.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "types-aiofiles>=25.1.0.20251011",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
overwrite_in_place = true
