[project]
name = "plugfs"
version = "1.0.1"
description = ""
authors = [
    {name = "Youri Westerman",email = "y.westerman@amsterdam.nl"},
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiofiles (>=24.1.0,<26.0.0)",
    "azure-storage-blob (>=12.28.0,<12.29.0)",
    "aiohttp[speedups] (>=3.13.5,<4.0.0)",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "black>=25.1.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "types-aiofiles>=25.1.0.20260409",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
overwrite_in_place = true
